fix(input,search,suggestion,textfield):  Å was cut off (looked like Ă) in inputs in Chrome/Safari

--- a/@udir-design/react/src/components/input/input.css
+++ b/@udir-design/react/src/components/input/input.css
@@ -1,4 +1,22 @@
-/* This file can be removed when we update to Designsystemet > 1.7.1 */
-
-.ds-input {
+.ds-input:is(
+  [type='text'],
+  [type='search'],
+  [type='num'],
+  [type='tel'],
+  [type='url'],
+  [type='password'],
+  [type='month'],
+  [type='week']
+) {
+  /* This fixes Å looking like Ă (top part of ring was cut off) in Chrome and Safari */
+  height: unset;
+  --dsc-input-line-height: var(--ds-line-height-md);
+  --dsc-input-padding-block: calc(
+    (var(--dsc-input-size) - var(--dsc-input-line-height) * 1em) / 2 -
+      var(--dsc-input-border-width)
+  );
+  --dsc-input-padding-inline: var(--ds-size-3);
+  --dsc-input-padding: var(--dsc-input-padding-block)
+    var(--dsc-input-padding-inline);
+  line-height: var(--dsc-input-line-height);
 }
